tests/compile_fail/funcdef_not_fn_type.rs
//! Test funcdef with non-function type error.

use angelscript::funcdef;

#[funcdef]
type TestCallback = i32;

fn main() {}
