tests/compile_fail/funcdef_not_fn_type.stderr
error: funcdef requires a bare function type like `fn(i32) -> bool`
 --> tests/compile_fail/funcdef_not_fn_type.rs:6:21
  |
6 | type TestCallback = i32;
  |                     ^^^
